[tool.poetry]
name = "tools"
version = "0.1.0"
description = "Tools and script written by me for myself"
authors = ["Lukas Vavrek <lvavrek7@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
jwt = "^1.3.1"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
